<resources>
    <string name="app_name">CIVAR II</string>
    <string name="title_activity_main">CIVAR II</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="app_bar_navigation_name">MONITORING SYSTEM NATURAL RESERVES THE FEDERAL DISTRICT</string>

    <string name="task_validity_label">VALIDITY</string>
    <string name="task_priority_label">PRIORITY</string>
    <string name="task_begin_date_label">Begin Date:</string>
    <string name="task_end_date_label">End Date:</string>
    <string name="decline_task_label">  DECLINE  </string>
    <string name="finish_task_label">  FINISH  </string>
    <string name="agree_task_label">  AGREE  </string>
    <string name="picture_task_label">Picture</string>
    <string name="video_task_label">   Videos</string>
    <string name="send_task_label">SEND</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_server_sync">Server synchronized</string>
    <string name="title_activity_maps">Map</string>

    <string name="password_login_error">This password is invalid</string>
    <string name="username_login_error">This field is required</string>
    <string name="default_user_unregister">Unregister user</string>
    <string name="default_incorrect_password">Incorrect password</string>
    <string name="default_ws_operation">Web Service default is not Online.</string>
    <string name="default_login_error">The email address and password you entered do not match.</string>
    <string name="no_user_team_login_error">The user is not assigned a team.</string>
    <string name="default_gps_error">GPS is offline.</string>
    <string name="default_connect_error">A failure in the server connection has been detected.</string>
    <string name="default_exception_error">Unexpected error.</string>
    <string name="default_http_exception_error">HTTP request failed</string>
    <string name="default_attaching_img_error">"Attaching picture request failed"</string>
    <string name="default_attaching_video_error">"Attaching video request failed"</string>

    <string name="default_soap_error">Unexpected soap error.</string>
    <string name="default_file_single_selection">Single-selection: Tap on any file.</string>
    <string name="default_file_multiple_selection">Multi-selection: Tap and Hold on the first file,tap for more, tap on OPEN to finish.</string>

    <string name="task_priority_name_low">Low</string>
    <string name="task_priority_name_mid">Medium</string>
    <string name="task_priority_name_high">High</string>
    <string name="task_priority_name_express">Express</string>

    <string name="default_empty_task_list">Empty task list</string>
    <string name="default_task_agree_msg">Task agree</string>
    <string name="default_save_img_msg">Save image</string>
    <string name="default_save_video_msg">Save video</string>

    <string name="default_attaching_img">Attaching images. Please wait…</string>
    <string name="default_update_task">Update task. Please wait…</string>
    <string name="tasks_loading">Tasks Loading…</string>

    <string name="server_sync">Server Synchronized</string>
    <string name="default_server_sync_error">Server Synchronized Error</string>
    <string name="default_no_synchronized_task">Synchronized Tasks</string>

    <string name="agree_restore_label">agree</string>
    <string name="cancel_restore_label">cancel</string>
    <string name="default_restore_window_title">¿Do you want to restore server tasks?</string>
    <string name="default_restore_window_content">Restoration tasks erase stored locally.</string>
    <string name="default_out_of_memory">Out of memory, check with the admin</string>
    <string name="default_enter_username">Enter username</string>
    <string name="default_enter_password">Enter password</string>
    <string name="default_entrer_email">Ingrese su correo electronico</string>
    <string name="default_title_alert_dialog">Importante</string>
    <string name="default_update_version">Se ha detectado una versión actualizada, se procedera a descargarla</string>
    <string name="default_positive_button">Confirmar</string>
    <string name="gallery_task_label">Galeria Adjunta</string>
    <string name="title_activity_tab">Galeria Adjunta</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="default_profile_delete_msg">¿Desea Eliminar este elemento?</string>
    <string name="default_negative_button">Cancelar</string>
    <string name="default_loading_msg">Espere un momento por favor</string>
    <string name="default_delete_profile_msg">Eliminando elemento ...</string>
    <string name="default_item_description_msg">¿Deseas guardar los cambios en la descripción de la imagen?</string>
    <string name="default_positive_yes_button">Si</string>
    <string name="default_negative_no_button">No</string>
    <string name="default_negative_cancel_button">Cancelar</string>
    <string name="default_saving_img_msg">Guardando Imagen</string>
    <string name="default_no_delete_msg">Las imagenes enviadas del servidor no pueden ser eliminadas</string>
    <string name="default_load_pictures">Cargando imagenes adjuntadas</string>
    <string name="default_fail_save">No es posible guardar los cambios, intente mas tarde ...</string>
    <string name="default_no_edit_msg">Las imagenes enviadas del servidor no pueden ser modificadas</string>
    <string name="default_save_back_home">¿Desea sincronizar los archivos pendientes por guardar?</string>
    <string name="default_load_videos">Cargando videos adjuntos</string>
    <string name="default_msg_sync_server">Archivo agregado por el monitor</string>
    <string name="default_load_document">Cargando documentos adjuntos</string>
    <string name="default_no_add_file">No es posible adjuntar archivos con el estatus actual de la tarea</string>
    <string name="default_alert_empty_descripcion">Uno o más archivos no tienen descripción</string>
    <string name="default_alert_empty_unique_description">La descripción de los archivos es oblogaroria</string>
    <string name="default_task_location_msg">Ubicar Tarea</string>
    <string name="title_activity_search_member">Busqueda de miembros</string>
    <string name="default_no_add_member_one">El miembro ya fue agregado a la tarea.</string>
    <string name="default_no_add_member_two">El miembro ya fue agregado a la cola.</string>
    <string name="default_no_add_member_three">El miembro no puede ser agregado a la tarea, El es el responsable.</string>
    <string name="default_member_msg">"Cargando miembros ... "</string>
    <string name="default_save_members">Asignando miembros a la tarea ...</string>
    <string name="default_no_action">Solo el propietario de la tarea puede realizar esta acción.</string>


</resources>
