<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:alpha="80"
    >
    <TextView
        android:id="@+id/hidden_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="{jsonArray}"
        android:visibility="invisible"
        android:textSize="0sp"
        />
    <TextView
        android:id="@+id/task_title"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:text="task title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryWhite"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="20dp"
        />
    <TextView
        android:id="@+id/task_content"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:text="task content"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryWhite"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="3dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/task_validity_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_validity_label"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@color/colorPrimaryWhite"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp"
            />
        <TextView
            android:id="@+id/task_priority_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_priority_label"
            android:textStyle="bold"
            android:textSize="12sp"
            android:textColor="@color/colorPrimaryWhite"
            android:paddingLeft="156dp"
            android:paddingTop="5dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/task_begin_date_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_begin_date_label"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryWhite"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="1dp"
            />
        <TextView
            android:id="@+id/task_begin_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="24/Ene/2016 14:00 hrs"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryWhite"
            android:paddingLeft="1dp"
            android:paddingTop="1dp"
            />
        <TextView
            android:id="@+id/task_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TASK PRIORITY"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryWhite"
            android:paddingLeft="14dp"
            android:paddingTop="1dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/task_end_date_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_end_date_label"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryWhite"
            android:paddingLeft="30dp"
            android:paddingRight="11dp"
            android:paddingTop="1dp"
            />
        <TextView
            android:id="@+id/task_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="24/Ene/2016 14:00 hrs"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryWhite"
            android:paddingLeft="1dp"
            android:paddingTop="1dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="20dp">
        <Button
            android:id="@+id/decline_task_button"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/decline_task_label"
            android:textStyle="bold"
            android:textSize="10sp"
            android:textColor="@color/colorPrimaryWhite"
            android:background="@color/colorPrimaryGray"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            />

        <Button
            android:id="@+id/finish_task_button"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/finish_task_label"
            android:textStyle="bold"
            android:textSize="10sp"
            android:textColor="@color/colorPrimaryWhite"
            android:background="@color/colorPrimaryGray"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            />

        <Button
            android:id="@+id/agree_task_button"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:text="@string/agree_task_label"
            android:textStyle="bold"
            android:textSize="10sp"
            android:textColor="@color/colorPrimaryWhite"
            android:background="@color/colorAccent"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryGray"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
</LinearLayout>
